--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,8 @@ jobs:
     - name: Set up Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: "0.105.0"
+        hugo-version: "latest"
+        extended: true
 
     - name: Build and Deploy
       run: |
