--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}  # 你的个人访问令牌
-        EXTERNAL_REPOSITORY: szhiku/szhiku.github.io  # 你的GitHub Pages仓库
+        EXTERNAL_REPOSITORY: szhiku/szhiku  # 你的GitHub Pages仓库
         PUBLISH_BRANCH: main  # 或者是你的GitHub Pages分支
         PUBLISH_DIR: ./
         commit_message: ${{ github.event.head_commit.message }}
