--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
 
     - name: Set up Hugo
-      uses: peaceiris/actions-hugo@master
+      uses: peaceiris/actions-hugo@v2.6.0
       with:
         hugo-version: "latest"
         extended: true
